@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="plugin.video.dr.dk.podcast"
-	version="1.0.2"
+	version="1.0.3"
 	name="DR.dk Video Podcasts"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
 		<import addon="xbmc.python" version="1.0"/>
-		<import addon="script.module.danishaddons" version="1.0.0"/>
+		<import addon="script.module.danishaddons" version="1.1.0"/>
+        <import addon="script.module.feedparser" version="4.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
