@@ -1,3 +1,7 @@
+[B]Version 1.0.3[/B]
+- Updated to danishaddons module 1.1.0
+- Use script.module.feedparser
+
 [B]Version 1.0.2[/B]
 - Fixed clip duration
 - Fixed various errors parsing clip information
